src/objects/Contact_Address__c.object
<CustomObject>
    <fields>
        <fullName>AssistantName__c</fullName>
        <formula>Contact__r.AssistantName</formula>
        <label>Assistant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Address__c</fullName>
        <label>Bad Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>Probable</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; if(isblank(Contact__r.MiddleName), &quot;&quot;, &quot; &quot; &amp; Contact__r.MiddleName) &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Addresses</relationshipLabel>
        <relationshipName>Contact_Addresses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>Contact__r.Employer1__c</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <formula>Contact__r.FID__c</formula>
        <label>FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Information_Source__c</fullName>
        <label>Information Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Catalist</fullName>
                </value>
                <value>
                    <fullName>EList</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Lexis-Nexus</fullName>
                </value>
                <value>
                    <fullName>License List 2014</fullName>
                </value>
                <value>
                    <fullName>Migrated from Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TargetSmart</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Entry_Datetime__c</fullName>
        <label>Original Entry Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>The Zip Code</description>
        <label>PostalCode</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the Contact&apos;s primary address?  The trigger prevents more than one Primary Address per Contact.</description>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_as_Mailing__c</fullName>
        <formula>left(Contact__r.MailingPostalCode, 5) &amp; &quot;~&quot; &amp; trim(left(substitute(Contact__r.MailingStreet, &quot;.&quot;, &quot;&quot;), 5))
=
left(PostalCode__c, 5) &amp; &quot;~&quot; &amp; trim(left(substitute(Street__c, &quot;.&quot;, &quot;&quot;), 5))</formula>
        <label>Same as Mailing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>&quot;CA&quot;</defaultValue>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_View__c</fullName>
        <formula>IMAGE(&quot;http://maps.googleapis.com/maps/api/streetview?size=300x300&amp;sensor=false&amp;location=&quot; &amp;  Street__c &amp; &quot;,&quot; &amp; City__c &amp; &quot;+&quot; &amp; State__c, &quot;&quot;)</formula>
        <label>Street View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contact Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADDR-{00000000}</displayFormat>
        <label>Contact Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Postal_Code_Must_Be_Five</fullName>
        <active>true</active>
        <description>Must Be Five Digits</description>
        <errorConditionFormula>len(PostalCode__c) &lt; 5</errorConditionFormula>
        <errorDisplayField>PostalCode__c</errorDisplayField>
        <errorMessage>The Postal Code/Zip must be 5 digits.</errorMessage>
    </validationRules>
</CustomObject>